DROP DATABASE IF EXISTS asheville;
CREATE DATABASE asheville;

CREATE TABLE beekeeper (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  username VARCHAR(50) NOT NULL,
  password_hash VARCHAR(255) NOT NULL,
  email VARCHAR(254) NOT NULL,
  phone VARCHAR(32),
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  CONSTRAINT uq_beekeeper_username UNIQUE (username),
  CONSTRAINT uq_beekeeper_email UNIQUE (email)
);

CREATE TABLE hive (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  beekeeper_id BIGINT NOT NULL,
  name VARCHAR(100) NOT NULL,
  notes TEXT,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  CONSTRAINT fk_hive_beekeeper
    FOREIGN KEY (beekeeper_id)
    REFERENCES beekeeper (id)
    ON DELETE CASCADE
);

CREATE INDEX idx_hive_beekeeper
  ON hive (beekeeper_id);

CREATE TABLE device (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  hive_id BIGINT NOT NULL,
  installed_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  last_seen_at TIMESTAMPTZ,
  CONSTRAINT fk_device_hive
    FOREIGN KEY (hive_id)
    REFERENCES hive (id)
    ON DELETE CASCADE,
  CONSTRAINT uq_device_hive UNIQUE (hive_id)
);

CREATE INDEX idx_device_hive
  ON device (hive_id);

CREATE INDEX idx_device_last_seen
  ON device (last_seen_at);

CREATE TABLE reading (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  device_id BIGINT NOT NULL,
  recorded_at TIMESTAMPTZ NOT NULL,
  temperature_f NUMERIC NOT NULL,
  battery_voltage NUMERIC,
  signal_strength NUMERIC,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  CONSTRAINT uq_device_time UNIQUE (device_id, recorded_at),
  CONSTRAINT fk_reading_device
    FOREIGN KEY (device_id)
    REFERENCES device (id)
    ON DELETE CASCADE,
  CONSTRAINT chk_reading_temperature
    CHECK (temperature_f > -100 AND temperature_f < 150),
  CONSTRAINT chk_reading_battery
    CHECK (battery_voltage IS NULL OR battery_voltage >= 0)
);

CREATE INDEX idx_reading_device_recorded_at_desc
  ON reading (device_id, recorded_at DESC);

CREATE INDEX idx_reading_recorded_at_brin
  ON reading USING brin (recorded_at);

CREATE TABLE session (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  beekeeper_id BIGINT NOT NULL,
  session_token TEXT NOT NULL CHECK (length(session_token) = 64),
  csrf_token TEXT NOT NULL CHECK (length(csrf_token) = 64),
  active BOOLEAN NOT NULL DEFAULT TRUE,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  expires_at TIMESTAMPTZ NOT NULL,
  last_activity_at TIMESTAMPTZ,
  CONSTRAINT uq_session_token UNIQUE (session_token),
  CONSTRAINT uq_session_csrf_token UNIQUE (csrf_token),
  CONSTRAINT fk_session_beekeeper
    FOREIGN KEY (beekeeper_id)
    REFERENCES beekeeper (id)
    ON DELETE CASCADE,
  CONSTRAINT chk_session_expires
    CHECK (expires_at > created_at)
);

CREATE INDEX idx_session_beekeeper_active
  ON session (beekeeper_id, active);

CREATE INDEX idx_session_expires
  ON session (expires_at);

CREATE INDEX idx_session_token_active
  ON session (session_token, active);

CREATE TABLE password_reset_token (
  beekeeper_id BIGINT PRIMARY KEY
    REFERENCES beekeeper (id) ON DELETE CASCADE,
  token_hash TEXT NOT NULL,
  expires_at TIMESTAMPTZ NOT NULL,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  consumed_at TIMESTAMPTZ
);

CREATE INDEX idx_password_reset_expires
  ON password_reset_token (expires_at);

CREATE FUNCTION set_updated_at()
RETURNS trigger AS $$
BEGIN
  NEW.updated_at = now();
  RETURN NEW;
END;
$$ LANGUAGE plpgsql;

CREATE TRIGGER trg_beekeeper_updated_at
BEFORE UPDATE ON beekeeper
FOR EACH ROW
EXECUTE FUNCTION set_updated_at();

CREATE TRIGGER trg_hive_updated_at
BEFORE UPDATE ON hive
FOR EACH ROW
EXECUTE FUNCTION set_updated_at();
