---
config:
  layout: elk
---
erDiagram
    direction TB

    BEEKEEPER {
        bigint id PK
        string username "UNIQUE"
        string password_hash
        string email "UNIQUE"
        string phone
        timestamptz created_at
        timestamptz updated_at
    }

    HIVE {
        bigint id PK
        bigint beekeeper_id FK
        string name
        text notes
        timestamptz created_at
        timestamptz updated_at
    }

    DEVICE {
        bigint id PK
        bigint hive_id FK "UNIQUE (1:1 with hive)"
        timestamptz installed_at
        timestamptz last_seen_at
    }

    READING {
        bigint id PK
        bigint device_id FK
        timestamptz recorded_at "UNIQUE with device_id"
        numeric temperature_f
        numeric battery_voltage
        numeric signal_strength
        timestamptz created_at
    }

    SESSION {
        bigint id PK
        bigint beekeeper_id FK
        text session_token "UNIQUE, len=64"
        text csrf_token "UNIQUE, len=64"
        boolean active
        timestamptz created_at
        timestamptz expires_at
        timestamptz last_activity_at
    }

    PASSWORD_RESET_TOKEN {
        bigint beekeeper_id PK, FK
        text token_hash
        timestamptz expires_at
        timestamptz created_at
        timestamptz consumed_at
    }

    BEEKEEPER ||--o{ HIVE : owns
    HIVE ||--|| DEVICE : has
    DEVICE ||--o{ READING : reports
    BEEKEEPER ||--o{ SESSION : has
    BEEKEEPER ||--o| PASSWORD_RESET_TOKEN : resets
